update breadcrumb item

--- a/coffeeparty.html
+++ b/coffeeparty.html
@@ -55,7 +55,7 @@
         <nav aria-label="breadcrumb" style="--bs-breadcrumb-divider: '>';" class="my-3 ms-3">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item"><a href="/">Home</a></li>
-                <li class="breadcrumb-item"><a href="/allproducts">Products</a></li>
+                <li class="breadcrumb-item"><a href="/allproducts.html">Products</a></li>
                 <li class="breadcrumb-item active" aria-current="page">Coffee Parties</li>
             </ol>
         </nav>
