update products of the week

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <p class="card-text">Find out the most popular coffee maker!</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">View details</a>
+                            <a href="coffeeMachine.html" class="btn btn-primary">View details</a>
                         </div>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
                             <p class="card-text">Our famous coffee flavors!</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">View details</a>
+                            <a href="coffeeparty.html" class="btn btn-primary">View details</a>
                         </div>
                     </div>
                 </div>
