--- a/contact.html
+++ b/contact.html
@@ -52,63 +52,74 @@
         </nav>
     </header>
     <main role="main">
-
         <div class="container-fluid jumbotron jumbotron-other py-5">
             <div class="container">
-                <h1 class="display-3 d-none d-md-block text-white">Send us an email, we'd love to hear from you.</h1>
+                <h6 class="display-5 d-none d-md-block text-white">Send us an email, we'd love to hear from you.</h6>
             </div>
         </div>
-
         <div class="container">
-
             <nav aria-label="breadcrumb" style="--bs-breadcrumb-divider: '>';" class="my-3 ms-3">
                 <ol class="breadcrumb">
                     <li class="breadcrumb-item"><a href="/">Home</a></li>
                     <li class="breadcrumb-item active" aria-current="page">Contact</li>
                 </ol>
             </nav>
-
-            <form method="post">
-                <div class="text-center">
-                    <h3>Contact us</h3>
-                    <h4 class="text-muted">We would love to hear from you!</h4>
+            <section class="container contact d-flex flex-column justify-content-center align-items-center text-center">
+                <div>
+                    <div>About The Coffee Company</div>
+                    <h1>Contact Us</h1>
                 </div>
-
-                <div class="row mt-3">
-                    <div class="col-md-6">
-                        <div class="mb-2">
-                            <input type="text" class="form-control" placeholder="Your Name *" aria-label="name" />
-                        </div>
-                        <div class="mb-2">
-                            <input type="text" class="form-control" placeholder="Your Email *" aria-label="email" />
-                        </div>
-                        <div class="mb-2">
-                            <input type="text" class="form-control" placeholder="Your Phone Number *"
-                                aria-label="phone" />
-                        </div>
-                        <div class="mb-2">
-                            <button type="button" class="btn btn-primary" id="sendMessage">Send Message</button>
+                    <div class="col-lg-8 mb-4">
+                        <div class="card rounded">
+                            <div class="card-body">
+                                <p><strong>Phone:</strong><br>+46 480 90 80 00</p>
+                                <p><strong>Support:</strong><br>+46 480 90 80 00</p>
+                                <p><strong>Corporate identity number:</strong><br>579867-0890</p>
+                                <p><strong>Company Address:</strong><br>Östermalmsgatan 45, 11234 Stockholm</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col-md-6">
-                        <div>
-                            <textarea class="form-control" placeholder="Your Message *" rows="5"></textarea>
+                <div class="row">
+                    <div class="col mb-4">
+                        <div class="card rounded">
+                            <div class="d-flex justify-content-center mt-3">
+                                <img class="card-img-top rounded-circle" src="images/vd.png" alt="vd picture">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Björn Sundeby</h5>
+                                <p class="card-text">VD, The Coffee Company</p>
+                                <p>+46 73 608 86 57</p>
+                                <p><a href="mailto:bjorn.sundeby@thecoffeecompany.com">bjorn.sundeby@thecoffeecompany.com</a></p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col mb-4">
+                        <div class="card rounded">
+                            <div class="d-flex justify-content-center mt-3">
+                                <img class="card-img-top rounded-circle" src="images/hr.png" alt="hr picture">
+                            </div>
+                            <div class="card-body">
+                                <h5 class="card-title">Anna Wahlberg</h5>
+                                <p class="card-text">HR Manager, The Coffee Company</p>
+                                <p>+46 70 908 66 77</p>
+                                <p><a href="mailto:anna.wahlberg@thecoffeecompany.com">anna.wahlberg@thecoffeecompany.com</a></p>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </form>
-    </main> 
-    <hr class="footer-divider"></hr>
-    <footer class="container " style="text-align: center;">
-        <div class="row">
-            <div class="footer-content col mx-auto">
-                <p>
-                    <img src="images/coffeeBreak.jpeg" style="width: 30px;" alt="logo">&copy; 2023 The Coffee Company - All Rights Reserved.</p>
-                <p>Last updated: October 16, 2023</p>
-                <p>Built and Designed by Xiahui Liu</p>
+            </section>
+        </main> 
+        <hr class="footer-divider"></hr>
+        <footer class="container " style="text-align: center;">
+            <div class="row">
+                <div class="footer-content col mx-auto">
+                    <p>
+                        <img src="images/coffeeBreak.jpeg" style="width: 30px;" alt="logo">&copy; 2023 The Coffee Company - All Rights Reserved.</p>
+                    <p>Last updated: October 16, 2023</p>
+                    <p>Built and Designed by Xiahui Liu</p>
+                </div>
             </div>
-        </div>
-    </footer>
+        </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
