add shopping cart

--- a/coffeeMachine.html
+++ b/coffeeMachine.html
@@ -69,7 +69,7 @@
                         <p class="card-text">Price: 6194,00kr</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">View details</a>
+                        <a href="philips.html" class="btn btn-primary">View details</a>
                     </div>
                 </div>
             </div>
@@ -77,12 +77,12 @@
                 <div class="card rounded shadow-sm">
                     <img class="card-img-top" src="images/coffeeMachine2.png"  alt="model2">
                     <div class="card-body">
-                        <h6 class="card-title">Kaffemaskin Philips Series 3200 </h6>
+                        <h6 class="card-title">Philips Series 3200 </h6>
                         <p>Model:LatteGo EP3241/50 </p>
                         <p class="card-text">Price: 6194,00kr</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">View details</a>
+                        <a href="philips.html" class="btn btn-primary">View details</a>
                     </div>
                 </div>
             </div>
@@ -90,12 +90,12 @@
                 <div class="card rounded shadow-sm">
                     <img class="card-img-top" src="images/coffeeMachine3.jpeg"  alt="model3">
                     <div class="card-body">
-                        <h6 class="card-title">Kaffemaskin Philips Series 3200 </h6>
+                        <h6 class="card-title">Philips Series 3200 </h6>
                         <p>Model:LatteGo EP3241/50 </p>
                         <p class="card-text">Price: 6194,00kr</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">View details</a>
+                        <a href="philips.html" class="btn btn-primary">View details</a>
                     </div>
                 </div>
             </div>
@@ -103,12 +103,12 @@
                 <div class="card rounded shadow-sm">
                     <img class="card-img-top" src="images/coffeeMachine1.jpeg"  alt="model4">
                     <div class="card-body">
-                        <h6 class="card-title">Kaffemaskin Philips Series 3200 </h6>
+                        <h6 class="card-title">Philips Series 3200 </h6>
                         <p>Model:LatteGo EP3241/50 </p>
                         <p class="card-text">Price: 6194,00kr</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">View details</a>
+                        <a href="philips.html" class="btn btn-primary">View details</a>
                     </div>
                 </div>
             </div>
@@ -116,12 +116,12 @@
                 <div class="card rounded shadow-sm">
                     <img class="card-img-top" src="images/coffeeMachine2.png"  alt="model5">
                     <div class="card-body">
-                        <h6 class="card-title">Kaffemaskin Philips Series 3200 </h6>
+                        <h6 class="card-title">Philips Series 3200 </h6>
                         <p>Model:LatteGo EP3241/50 </p>
                         <p class="card-text">Price: 6194,00kr</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">View details</a>
+                        <a href="philips.html" class="btn btn-primary">View details</a>
                     </div>
                 </div>
             </div>
@@ -134,7 +134,7 @@
                         <p class="card-text">Price: 6194,00kr</p>
                     </div>
                     <div class="card-footer">
-                        <a href="#" class="btn btn-primary">View details</a>
+                        <a href="philips.html" class="btn btn-primary">View details</a>
                     </div>
                 </div>
             </div>
