--- a/allproducts.html
+++ b/allproducts.html
@@ -86,17 +86,18 @@
             </div>
     </main>
     <hr class="footer-divider"></hr>
-    <footer class="container " style="text-align: center;">
-        <div class="row">
-            <div class="footer-content col mx-auto">
+    <footer class="container text-center">
+        <div class="d-flex align-items-center justify-content-center">
+            <div class="footer-content">
                 <p>
-                    <img src="images/coffeeBreak.jpeg" style="width: 30px;" alt="logo">&copy; 2023 The Coffee Company - All Rights Reserved.</p>
+                    <img src="images/coffeeBreak.jpeg" style="width: 30px;" alt="logo">&copy; 2023 The Coffee Company - All Rights Reserved.
+                </p>
                 <p>Last updated: October 16, 2023</p>
                 <p>Built and Designed by Xiahui Liu</p>
             </div>
         </div>
     </footer>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>   
